deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-ml
  template:
    metadata:
      labels:
        app: flask-ml
    spec:
      containers:
      - name: flask-ml-container
        image: flask-ml-app:latest
        imagePullPolicy: Never # local image
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-ml
spec:
  selector:
    app: flask-ml
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
